Bug 130526 - New B&N dialog in Draw has Scope section with "Slide" and "Selection" options. It's strange
Summary: New B&N dialog in Draw has Scope section with "Slide" and "Selection" options...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Sven Lüppken
URL:
Whiteboard: target:7.1.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks:
 
Reported: 2020-02-08 13:05 UTC by Roman Kuznetsov
Modified: 2020-11-02 08:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
First version of a possible patch (784 bytes, patch)
2020-10-29 17:27 UTC, Sven Lüppken
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-02-08 13:05:44 UTC
Description:
New B&N dialog in Draw has Scope section with "Slide" and "Selection" options. It's strange.

If I understood right, then new B&N dialog for Impress just was copy to Draw also without any optimizations. Draw and Impress are different module anyway and we should make some changes there for Draw case.

First, Draw doesn't has a "Slide" thing. Second, we can create lists only inside some shapes or text boxes (that are shapes too) in Draw, but can't for all page! In Impress we can create lists on slide in special predefined area with own styles.

Possibly we should change Slide label to Shape label and change C++ code there that it works as we want in Draw.


Steps to Reproduce:
1. Open Draw
2. Create a shape
3. Create a some list inside the shape
4. Open B&N dialog from Format->Bulet & Numbering
5. Look at Slide label

Actual Results:
There is a Slide label and I don't know how it works in Draw case

Expected Results:
There is no a Slide label but possibly there is some another variant that works fine for list in Draw case


Reproducible: Always


User Profile Reset: No



Additional Info:
-
Comment 1 Heiko Tietze 2020-02-18 09:49:25 UTC
(In reply to Roman Kuznetsov from comment #0)
> Draw and Impress are different module

Technically they are the same, more or less. But different of course from the user perspective and we do use Slide vs. Page everywhere.

You can apply the number format to the current object (text box, shape) or to all objects on the slide/page. And in case of Impress it's possible to change the master, which makes not so much sense for Draw since this master is rather a static background.

So what we should do in case of Draw is
* Change "Slide" to "Page"
* Hide "Apply to Master" button

Code pointer is sd/source/ui/dlg/BulletAndPositionDlg.cxx
Comment 2 Aron Budea 2020-02-19 02:04:41 UTC
Seems like a dupe of bug 130069.
Comment 3 Buovjaga 2020-10-19 05:08:47 UTC
(In reply to Aron Budea from comment #2)
> Seems like a dupe of bug 130069.

So should we close this as dupe, but transfer the easy hack status?
Comment 4 Regina Henschel 2020-10-19 11:31:43 UTC
Bug 130069 lists several problems, one of them is the for Draw useless "master" option. Because the suggestion to completely remove the section in Draw got no support, it is anyway necessary to create individual bug reports for the problems listed in bug 130069.
Comment 5 Sven Lüppken 2020-10-29 17:26:58 UTC
(In reply to Heiko Tietze from comment #1)
> (In reply to Roman Kuznetsov from comment #0)
> > Draw and Impress are different module
> 
> Technically they are the same, more or less. But different of course from
> the user perspective and we do use Slide vs. Page everywhere.
> 
> You can apply the number format to the current object (text box, shape) or
> to all objects on the slide/page. And in case of Impress it's possible to
> change the master, which makes not so much sense for Draw since this master
> is rather a static background.
> 
> So what we should do in case of Draw is
> * Change "Slide" to "Page"
> * Hide "Apply to Master" button
> 
> Code pointer is sd/source/ui/dlg/BulletAndPositionDlg.cxx

I attached a very simple (maybe too simple) patch for this bugreport. I literally hid the button. Another possibility would be to only create the button in Impress, not Draw, in the first place.

I'm willing to continue to work on this bug if this first version is not good enough. :) It's my first try, the LibreOffice code is quite big, so please bear with me.
Comment 6 Sven Lüppken 2020-10-29 17:27:29 UTC
Created attachment 166854 [details]
First version of a possible patch
Comment 7 Roman Kuznetsov 2020-10-29 19:19:55 UTC
(In reply to Sven Lüppken from comment #6)
> Created attachment 166854 [details]
> First version of a possible patch

Sven, can you send it into gerrit yourself?

Here is an instructions about LO development process wiki.documentfoundation.org/Development/GetInvolved
Comment 8 Heiko Tietze 2020-10-30 12:23:25 UTC
(In reply to Sven Lüppken from comment #5)
> I attached a very simple (maybe too simple) patch

LGTM, feel free to add me as reviewer on Gerrit.
Comment 9 Heiko Tietze 2020-11-02 08:34:58 UTC
Regina, please reopen if you think hiding the Apply to Master button in Draw is not sufficient.
Comment 10 Commit Notification 2020-11-02 08:35:38 UTC
Sven Lüppken committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d1b6694f843c5bda92e106db6efd36654df9ee9a

tdf#130526 Hide "Apply to Master"-button and rename "Slide" to "Page" in Draw

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.