tdf#130526- New b&n dialog has 'Scope' section with 'Slide' and 'Selection' options, it's strange.

This patch hides the Apply to Master button in b&n dialog of Draw

Change-Id: I2048c815d00d8be60bc13ce8bf52d3bf3cbc7be9